--- a/.github/workflows/ProtonMake.yml
+++ b/.github/workflows/ProtonMake.yml
@@ -11,7 +11,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
+    steps:   
+    - name: Dependency 
+      run: sudo apt install fontforge rsync wget patch docker unar tree 
+
     - uses: actions/checkout@v3
       with: 
         fetch-depth: 0
